2.5.1 () -

- TW-38   Dates in the far future give bad estimates in burndown
          (thanks to Ben Boeckel).
- TW-311  Estimated completion in burndown.daily shows impossible results
          (thanks to Michele Santullo).
- TW-1446 Difference in how relative dates are specified in report filters since 2.3.0
          (thanks to atomicules).
- TW-1703 When on-modify hook is installed, some messages print UUIDs
          instead of IDs (thanks to Robin Green).
- TW-1704 Use Task::identifier to reference the Task in the output
- TW-1720 CmdContext uses a mix of both throw and std::cout to convey
          errors (thanks to Paul Beckingham).
- Fixed broken build for Cygwin and older GCC (thanks to Richard Boß).
- The default configuration is now 256-color only.
- The 'columns' report now shows whether a column is modifiable or read only.
- Numerous performance improvements. Taskwarrior 2.5.1 is between X% and
  Y% faster than 2.5.0 when running various commands.

------ current release ---------------------------

2.5.0 (2015-10-21) dd5968a61b1fab258b38879cfdbb7d67f1bcd550

- TW-20   Task edit loses annotation precision, causing journal updating code
          to incorrectly indicate annotions are deleted and recreated (thanks
          to Cory Donnelly).
- TW-32   Unable to change annotations via task edit (thanks to Peter De
          Poorter).
- TW-46   Circular dependency detection broken for missing tasks.
- TW-50   Creation time is lost after editing (thanks to Ben Boeckel).
- TW-148  default.command options (thanks to David Patrick).
- TW-158  JSON export should model dependencies as array (thanks to Nicholas E.
          Rabenau).
- TW-263  Unexpected zsh autocomplete behaviour (thanks to Leon Feng, Marc
          Cornellà).
- TW-269  \t is not rendered correctly (thanks to Scott Kostyshak).
- TW-283  Process rc.* items when executing config (thanks to Ben Armstrong).
- TW-303  Ability for "import" to update existing tasks (thanks to Kosta