@@ -277,3 +277,4 @@ suggestions:
   Ander
   Naga Kiran
   David Badura
+  James Dietrich
